# test-vcpkg-mdl

./: .gitignore  CMakeLists.txt  CMakePresets.json  main-core.cpp  main-sdk.cpp  test-vcpkg-mdl.sublime-project  vcpkg.json
mdl_core/calls/: CMakeLists.txt
mdl_core/df_cuda/: CMakeLists.txt  example_df_cuda.cpp
mdl_core/execution_cuda/: CMakeLists.txt  example_execution_cuda.cpp
mdl_core/shared/: CMakeLists.txt  example_shared.h
